# mondo-agent-os

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: beta-feedback.md  config.yml  first-beta-run.md  scenario-intake.md
docs/: 10-minute-skilled-user-test.md  beta-candidate-outreach.md  beta-config-preflight.md  beta-feedback-form.md  beta-host-runbook.md  beta-invitation-message.md  beta-retro-guide.md  beta-session-notes-template.md  beta-test-checklist.md  beta-user-intake-template.md  beta-user-selection.md  cherry-studio-agent-guide.md  cherry-studio-mcp.md  commercial-update-model.md  customer-outcome.md  execution-roadmap.md  first-beta-start-here.md  github-release-checklist.md  github-task-guide.md  methodology.md  personal-ai-enablement.md  plain-user-experience.md  security.md  setup-guide.md  technical-architecture.md  user-first-day-guide.md
examples/: AI赋能项目示例.md
scripts/: mondo_mcp.py  prepare_first_beta_pack.py  verify_all.py  verify_beta_flow.py  verify_beta_pack.py  verify_docs.py  verify_mcp.py  verify_onboarding_flow.py  verify_runtime.py
skill/: SKILL.md
skill/references/: operating-flow.md
skill/scripts/: init_work_os.py
src/mondo_agent_os/: __init__.py  beta_intake.py  beta_outreach.py  beta_pack.py  beta_status.py  cli.py  mcp.py  onboarding.py  spec.py  templates.py  workspace.py
templates/: AGENTS.md  _next.md  _当前状态.md  _总览.md  _索引.md  _项目规则.md  决策日志.md  每日笔记.md  行动池.md
