[project]
name = "mondo-agent-os"
version = "0.1.0"
description = "A personal AI work OS runtime for project state, daily actions, agent rules, and role packs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mondo-os = "mondo_agent_os.cli:main"
mondo-mcp = "mondo_agent_os.mcp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
